[gd_scene load_steps=23 format=2]

[ext_resource path="res://sprites/witches_arms.png" type="Texture" id=1]
[ext_resource path="res://prefabs/SpriteShadow.tscn" type="PackedScene" id=2]
[ext_resource path="res://shaders/enemy_shader.shader" type="Shader" id=3]
[ext_resource path="res://sprites/hekatok_sprites.png" type="Texture" id=4]
[ext_resource path="res://scripts/Hekatok.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/blink_color = Color( 1, 0, 0.501961, 1 )
shader_param/blink_magnitude = 0.0

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 new_color : hint_color = vec4(0.13, 0.0, 0.32, 0.75);
//uniform vec2 offset = vec2(-3.0, 3.0);
// + vec2(cos(TIME) * UV.x * UV.y, UV.y * UV.x * sin(TIME)) * SCREEN_PIXEL_SIZE * 10.0

void fragment(){
	vec4 col = textureLod(TEXTURE, UV, 1.0);
	col.a *= new_color.a;
	col.rgb *= col.a;
	col.rgb = new_color.rgb;
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/new_color = Color( 0.13, 0, 0.32, 0.75 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0
height = 23.0

[sub_resource type="CircleShape2D" id=5]
radius = 12.0

[sub_resource type="Animation" id=6]
resource_name = "appear"
length = 0.266667
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "die"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=8]
length = 0.466667
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333, 0.2, 0.266667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 11 ]
}

[sub_resource type="Animation" id=9]
length = 0.571429
loop = true
step = 0.142857
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.142857, 0.285714, 0.428571 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 0, 5 ]
}

[sub_resource type="Animation" id=10]
resource_name = "appear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("witch_arm1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("witch_arm1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "disappear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("witch_arm1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("witch_arm1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=12]
resource_name = "hidden"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("witch_arm1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("witch_arm1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("witch_arm1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=14]
resource_name = "appear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("witch_arm2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("witch_arm2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 4, 3 ]
}

[sub_resource type="Animation" id=15]
resource_name = "disappear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("witch_arm2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("witch_arm2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=16]
resource_name = "hidden"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("witch_arm2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=17]
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("witch_arm2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("witch_arm2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[node name="Hekatok" type="Sprite" groups=[
"enemy",
]]
material = SubResource( 1 )
texture = ExtResource( 4 )
vframes = 3
hframes = 4
frame = 5
script = ExtResource( 5 )
max_life = 150.0
coins_to_spawn = 0
enemy_name = "Hekatok"

[node name="Shadow" parent="." instance=ExtResource( 2 )]
material = SubResource( 3 )
texture = ExtResource( 4 )
offset = Vector2( 0, 0 )
vframes = 3
hframes = 4
frame = 5
starting_position = Vector2( 2, 2 )

[node name="witch_arm1" type="Sprite" parent="."]
visible = false
use_parent_material = true
position = Vector2( -8, 20 )
texture = ExtResource( 1 )
vframes = 2
hframes = 3

[node name="Shadow2" parent="witch_arm1" instance=ExtResource( 2 )]
material = SubResource( 3 )
position = Vector2( 10, -18 )
texture = ExtResource( 1 )
offset = Vector2( 0, 0 )
vframes = 2
hframes = 3
starting_position = Vector2( 10, -18 )

[node name="witch_arm2" type="Sprite" parent="."]
visible = false
use_parent_material = true
position = Vector2( 10, 28 )
texture = ExtResource( 1 )
flip_h = true
vframes = 2
hframes = 3
frame = 3

[node name="Shadow3" parent="witch_arm2" instance=ExtResource( 2 )]
material = SubResource( 3 )
position = Vector2( -8, -26 )
texture = ExtResource( 1 )
offset = Vector2( 0, 0 )
flip_h = true
vframes = 2
hframes = 3
frame = 3
starting_position = Vector2( -8, -26 )

[node name="Area2D" type="Area2D" parent="." groups=[
"enemy",
]]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 19 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -14 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/appear = SubResource( 6 )
anims/die = SubResource( 7 )
anims/disappear = SubResource( 8 )
anims/idle = SubResource( 9 )

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="WitchArm1Animator" type="AnimationPlayer" parent="."]
autoplay = "hidden"
anims/appear = SubResource( 10 )
anims/disappear = SubResource( 11 )
anims/hidden = SubResource( 12 )
anims/idle = SubResource( 13 )

[node name="WitchArm2Animator" type="AnimationPlayer" parent="."]
autoplay = "hidden"
anims/appear = SubResource( 14 )
anims/disappear = SubResource( 15 )
anims/hidden = SubResource( 16 )
anims/idle = SubResource( 17 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="animation_finished" from="WitchArm1Animator" to="." method="_on_WitchArm1Animator_animation_finished"]
[connection signal="animation_finished" from="WitchArm2Animator" to="." method="_on_WitchArm2Animator_animation_finished"]
